fix: change z-index of header. it caused that header was visible when form was displayed

--- a/src/components/Sections/Header/Header.css
+++ b/src/components/Sections/Header/Header.css
@@ -18,7 +18,6 @@
     background-color: #131313;
 
     transition: transform 0.3s ease;
-    z-index: 1000;
 }
 
 .header.hidden {
