--- a/src/pages/AboutUsPage/HeaderHero/Hero/Hero.css
+++ b/src/pages/AboutUsPage/HeaderHero/Hero/Hero.css
@@ -6,6 +6,8 @@
 
     height: 90dvh;
     width: 100%;
+
+    margin-top: 10dvh;
 }
 
 .aboutUsHero video.heroVideo {
